--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,28 +1,34 @@
+p{
+  font-family: "Arial", "Meiryo", "sans-serif";
+  text-align: center;
+  font-size: 20px;
+  line-height: 1;
+}
+
+
 h1{
   font-family: 'Josefin Sans', sans-serif;
   font-family: 'Noto Sans JP', sans-serif;
-  font-size: 40px;
+  font-size: 2rem;
   font-weight: bold;
   text-align: center;
   text-shadow: 1px 1px 2px gray;
   border-bottom: solid 3px rgb(115,115,114);
-  letter-spacing: 48px;
+  letter-spacing: 1.2em;
 }
 
 h2{
   font-family: "Arial", "Meiryo", "sans-serif";
-  font-size: 35px;
+  font-size: 32px;
   text-align: center;
+  line-height: 0.5;
 }
 
 
-p{
-  font-family: "Arial", "Meiryo", "sans-serif";
-  font-size: 20px;
-  text-align: center;
-}
+
 
 .child{
+  font-size: 20px;
   font-weight: bold;
 }
 
