--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,5 +1,9 @@
-.child{
+html {
   font-size: 20px;
+  text-align: center;
+}
+
+.child{
   font-weight: bold;
 }
 
@@ -13,17 +17,13 @@
 
 p{
   font-family: "Arial", "Meiryo", "sans-serif";
-  text-align: center;
   line-height: 1;
 }
 
-
 h1{
   font-family: 'Josefin Sans', sans-serif;
-  font-family: 'Noto Sans JP', sans-serif;
   font-size: 2rem;
   font-weight: bold;
-  text-align: center;
   text-shadow: 1px 1px 2px gray;
   border-bottom: solid 3px rgb(115,115,114);
   letter-spacing: 1.2em;
@@ -32,8 +32,5 @@ h1{
 h2{
   font-family: "Arial", "Meiryo", "sans-serif";
   font-size: 32px;
-  text-align: center;
   line-height: 0.5;
 }
-
-
